# aviation-text-normalizer

./: .gitignore  README.md  pyproject.toml
src/aviation_text_normalizer/: __init__.py  cli.py
src/aviation_text_normalizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/aviation_text_normalizer/core/: entity.py  match.py  parser.py  tokenizer.py
src/aviation_text_normalizer/data/: __init__.py  dictionary.py
src/aviation_text_normalizer/fsms/: __init__.py  base.py  callsign.py  flight_level.py  frequency.py  heading.py  qnh.py  runway.py  taxiway.py  value.py
src/aviation_text_normalizer/utils/: __init__.py  number_utils.py
tests/: conftest.py  test_fsm_callsign.py  test_fsm_flight_level.py  test_fsm_frequency.py  test_fsm_heading.py  test_fsm_qnh.py  test_fsm_runway.py  test_fsm_taxiway.py  test_fsm_value.py  test_parser_integration.py  test_tokenizer.py
