[project]
name = "aviation-text-normalizer"
version = "0.1.0"
description = "Normalize aviation ATC/RTF text into readable (spoken) or canonical (code) forms."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
atc-normalize = "aviation_text_normalizer.cli:main"

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "B", "UP", "SIM"]
src = ["src"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = ["src"]
